--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 ##########################
 orfmap/data/*
 
-
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
 ##########################
 # Python compiled source #
