--- a/.github/ISSUE_TEMPLATE/issue_form.yml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yml
@@ -33,7 +33,7 @@ body:
       options:
         - Conda
         - Other
-        - None
+        - Neither
   - type: dropdown
     id: install
     attributes:
