--- a/.github/ISSUE_TEMPLATE/issue_form.yml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yml
@@ -33,7 +33,8 @@ body:
       options:
         - Conda
         - Other
-        - Neither
+    validations:
+      required: true
   - type: dropdown
     id: install
     attributes:
