--- a/.github/ISSUE_TEMPLATE/issue_form.yml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yml
@@ -33,6 +33,7 @@ body:
       options:
         - Conda
         - Other
+        - None
     validations:
       required: true
   - type: dropdown
