--- a/.github/ISSUE_TEMPLATE/issue_form.yml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yml
@@ -1,4 +1,4 @@
-ername: Bug Report
+name: Bug Report
 description: Create a report about a newly identified bug 
 title: "[Bug]: "
 labels: ["bug", "triage"]
